# C-Workshop

address_book/: .__afs5A68  address-book.cc  address-book.hh  contact-details.cc  contact-details.hh
bimap/: bimap.hxx
cartesian_vector/: vector.cc
chain_of_responsibility/: director.cc  handler.cc  president.cc  vice-president.cc
closer_to/: closer-to.cc
cmake/: CMakeLists.txt
cmake/cipeek/: CMakeLists.txt
cmake/cipeek/src/: cipeek.cc
cmake/src/: ciutils.cc
const/: person.cc  person.hh
constexpr_factorial/: constexpr-factorial.hh
directories_infos/: main-example.cc  read-info.cc  read-info.hh
doubly_linked_list/: list.cc  main.cc  node.cc
engine/: engine.cc  engine.hh  motor-cycle.cc  motor-cycle.hh  motor-truck.cc  motor-truck.hh  vehicle.cc  vehicle.hh
equal_pairs/: pair.hh
exception/: Makefile  game.cc  invalid-argument.cc  player.cc
exist_functor/: example.cc  exist.hh  exist.hxx
find_optional/: find-optional.cc
for_each/: for-each.hh
forward_multiplication/: forward-multiplication.cc
implements/: implements.hh  main.cc
int_container/: int-container.cc
is_numerical/: a.out  algorithm.hh  enable-if.hh  is-numerical.hh  main.cc
is_prime/: is-prime.hh
merge_sort/: merge-sort.cc
my_nfts/: auction.cc  auction.hh  nft.hh  nft.hxx  person.cc  person.hh
path/: path-example.cc  path.cc  unix-path.cc  unix-path.hh  windows-path.cc  windows-path.hh
ref_swap/: ref-swap.cc
replace/: replace.cc  replace.hh
singleton/: main.cc  singleton.cc  singleton.hh
smtptr/: main.cc  shared-pointer.hh  shared-pointer.hxx
(+5 files in other folders)
