cmake_minimum_required(VERSION 3.21.2)
project(ciutils)
find_library(YAML NAMES libyaml-cpp yaml-cpp REQUIRED)
add_library(ciutils SHARED "src/ciutils.cc")
target_compile_options(ciutils PRIVATE -Wall -Wextra -Werror -pedantic)
set_target_properties(ciutils PROPERTIES CXX_STANDARD 20 CXX_EXTENSIONS OFF)
add_subdirectory("cipeek/")
target_include_directories(ciutils PUBLIC "include/")
target_link_libraries(ciutils PRIVATE ${YAML})

